--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ web_modules/
 
 # Yarn Integrity file
 .yarn-integrity
+package-lock.json
 
 # dotenv environment variable files
 .env.development.local
